--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>tugas1 muhammat risky azis</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -31,53 +30,52 @@
     <div class="row align-items-start">
       <div class="col-lg-8">
         <h2 class="judul-list">Berita terbaru</h2>
-        <div class="atur">
-          <div class="list-berita">
-            <div class="atur-berita">
-              <h3 class="judul-berita">Headline 1</h3>
-              <p class="deskripsi-berita">deskripsi singkat berita pertama.</p>
-            </div>
-            <div class="atur-berita">
-              <h3 class="judul-berita">Headline 2</h3>
-              <p class="deskripsi-berita">deskripsi singkat berita kedua.</p>
-            </div>
-            <div class="atur-berita">
-              <h3 class="judul-berita">Headline 3</h3>
-              <p class="deskripsi-berita">deskripsi singkat berita ketiga.</p>
-            </div>
-            <div class="atur-berita">
-              <h3 class="judul-berita">Headline 4</h3>
-              <p class="deskripsi-berita">deskripsi singkat berita keempat.</p>
-            </div>
+        <div class="list-group atur">
+          <div class="list-group-item atur-berita">
+            <h3 class="list-group-item-heading judul-berita">Headline 1</h3>
+            <p class="list-group-item-text deskripsi-berita">deskripsi singkat berita pertama.</p>
+          </div>
+          <div class="list-group-item atur-berita">
+            <h3 class="list-group-item-heading judul-berita">Headline 2</h3>
+            <p class="list-group-item-text deskripsi-berita">deskripsi singkat berita kedua.</p>
+          </div>
+          <div class="list-group-item atur-berita">
+            <h3 class="list-group-item-heading judul-berita">Headline 3</h3>
+            <p class="list-group-item-text deskripsi-berita">deskripsi singkat berita ketiga.</p>
+          </div>
+          <div class="list-group-item atur-berita">
+            <h3 class="list-group-item-heading judul-berita">Headline 4</h3>
+            <p class="list-group-item-text deskripsi-berita">deskripsi singkat berita keempat.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3">
         <div class="agenda-list">
-          <ul class="agenda-items">
-            <li>Event 1 - Date 1</li>
-            <li>Event 2 - Date 2</li>
-            <li>Event 3 - Date 3</li>
-            <li>Event 4 - Date 4</li>
-            <li>Event 5 - Date 5</li>
-            <li>Event 6 - Date 6</li>
-            <li>Event 7 - Date 7</li>
-            <li>Event 8 - Date 8</li>
-            <li>Event 9 - Date 9</li>
-            <li>Event 10 - Date 10</li>
-            <li>Event 11 - Date 11</li>
-            <li>Event 12 - Date 12</li>
+          <ul class="list-group agenda-items">
+            <li class="list-group-item">Event 1 - Date 1</li>
+            <li class="list-group-item">Event 2 - Date 2</li>
+            <li class="list-group-item">Event 3 - Date 3</li>
+            <li class="list-group-item">Event 4 - Date 4</li>
+            <li class="list-group-item">Event 5 - Date 5</li>
+            <li class="list-group-item">Event 6 - Date 6</li>
+            <li class="list-group-item">Event 7 - Date 7</li>
+            <li class="list-group-item">Event 8 - Date 8</li>
+            <li class="list-group-item">Event 9 - Date 9</li>
+            <li class="list-group-item">Event 10 - Date 10</li>
+            <li class="list-group-item">Event 11 - Date 11</li>
+            <li class="list-group-item">Event 12 - Date 12</li>
           </ul>
         </div>
       </div>
     </div>
   </div>
-  
-  
-<footer class="footer">
-    <p>&copy; 2023 Muhammat Risky Azis. All rights reserved.</p>
-</footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>  
+  <footer class="footer bg-body-tertiary text-center"> <!-- Tambahkan kelas bg-body-tertiary untuk warna latar belakang footer -->
+    <div class="container">
+      <p class="text-black">&copy; 2023 Muhammat Risky Azis. All rights reserved.</p> <!-- Tambahkan kelas text-white untuk teks berwarna putih -->
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
